--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "day_allitems = datetime.date.today().isoformat()"
+    "# day_allitems = datetime.date.today().isoformat()"
    ]
   },
   {
@@ -266,11 +266,11 @@
     }
    ],
    "source": [
-    "df_types = pd.DataFrame(df['Publication type'].value_counts())\n",
-    "df_types = df_types.sort_values(['Publication type'], ascending=[False])\n",
-    "df_types=df_types.reset_index()\n",
-    "df_types = df_types.rename(columns={'index':'Publication type','Publication type':'Count'})\n",
-    "df_types"
+    "# df_types = pd.DataFrame(df['Publication type'].value_counts())\n",
+    "# df_types = df_types.sort_values(['Publication type'], ascending=[False])\n",
+    "# df_types=df_types.reset_index()\n",
+    "# df_types = df_types.rename(columns={'index':'Publication type','Publication type':'Count'})\n",
+    "# df_types"
    ]
   },
   {
@@ -1596,13 +1596,13 @@
     }
    ],
    "source": [
-    "fig = px.bar(df_types, x='Publication type', y='Count', color='Publication type')\n",
-    "fig.update_layout(\n",
-    "    autosize=False,\n",
-    "    width=1200,\n",
-    "    height=600,)\n",
-    "fig.update_xaxes(tickangle=-70)\n",
-    "fig.update_layout(title={'text':'Top 10 collections in the library', 'y':0.95, 'x':0.4, 'yanchor':'top'})"
+    "# fig = px.bar(df_types, x='Publication type', y='Count', color='Publication type')\n",
+    "# fig.update_layout(\n",
+    "#     autosize=False,\n",
+    "#     width=1200,\n",
+    "#     height=600,)\n",
+    "# fig.update_xaxes(tickangle=-70)\n",
+    "# fig.update_layout(title={'text':'Top 10 collections in the library', 'y':0.95, 'x':0.4, 'yanchor':'top'})"
    ]
   },
   {
@@ -2510,8 +2510,8 @@
     }
    ],
    "source": [
-    "fig = px.pie(df_types, values='Count', names='Publication type')\n",
-    "fig.update_layout(title={'text':'Publications by type', 'y':0.95, 'x':0.45, 'yanchor':'top'})\n"
+    "# fig = px.pie(df_types, values='Count', names='Publication type')\n",
+    "# fig.update_layout(title={'text':'Publications by type', 'y':0.95, 'x':0.45, 'yanchor':'top'})\n"
    ]
   },
   {
@@ -3544,22 +3544,22 @@
     }
    ],
    "source": [
-    "df['Date published'] = pd.to_datetime(df['Date published'],utc=True, errors='coerce').dt.tz_convert('Europe/London')\n",
-    "df['Date year'] = df['Date published'].dt.strftime('%Y')\n",
-    "df['Date year'] = df['Date year'].fillna('No date')\n",
-    "df_year=df['Date year'].value_counts()\n",
-    "df_year=df_year.reset_index()\n",
-    "df_year=df_year.rename(columns={'index':'Publication year','Date year':'Count'})\n",
-    "df_year.drop(df_year[df_year['Publication year']== 'No date'].index, inplace = True)\n",
-    "df_year=df_year.sort_values(by='Publication year', ascending=True)\n",
+    "# df['Date published'] = pd.to_datetime(df['Date published'],utc=True, errors='coerce').dt.tz_convert('Europe/London')\n",
+    "# df['Date year'] = df['Date published'].dt.strftime('%Y')\n",
+    "# df['Date year'] = df['Date year'].fillna('No date')\n",
+    "# df_year=df['Date year'].value_counts()\n",
+    "# df_year=df_year.reset_index()\n",
+    "# df_year=df_year.rename(columns={'index':'Publication year','Date year':'Count'})\n",
+    "# df_year.drop(df_year[df_year['Publication year']== 'No date'].index, inplace = True)\n",
+    "# df_year=df_year.sort_values(by='Publication year', ascending=True)\n",
     "\n",
-    "fig = px.bar(df_year, x='Publication year', y='Count')\n",
-    "fig.update_xaxes(tickangle=-70)\n",
-    "fig.update_layout(\n",
-    "    autosize=False,\n",
-    "    width=1400,\n",
-    "    height=700,)\n",
-    "fig.update_layout(title={'text':'Publications by year: all items', 'y':0.95, 'x':0.5, 'yanchor':'top'})"
+    "# fig = px.bar(df_year, x='Publication year', y='Count')\n",
+    "# fig.update_xaxes(tickangle=-70)\n",
+    "# fig.update_layout(\n",
+    "#     autosize=False,\n",
+    "#     width=1400,\n",
+    "#     height=700,)\n",
+    "# fig.update_layout(title={'text':'Publications by year: all items', 'y':0.95, 'x':0.5, 'yanchor':'top'})"
    ]
   },
   {
@@ -4572,14 +4572,14 @@
     }
    ],
    "source": [
-    "df_year['Sum'] = df_year['Count'].cumsum()\n",
-    "fig2 = px.line(df_year, x='Publication year', y='Sum')\n",
-    "fig2.update_layout(title={'text':'Publications by year: cumulative sum', 'y':0.95, 'x':0.5, 'yanchor':'top'})\n",
-    "fig2.update_layout(\n",
-    "    autosize=False,\n",
-    "    width=1000,\n",
-    "    height=500,)\n",
-    "fig2.update_xaxes(tickangle=-70)"
+    "# df_year['Sum'] = df_year['Count'].cumsum()\n",
+    "# fig2 = px.line(df_year, x='Publication year', y='Sum')\n",
+    "# fig2.update_layout(title={'text':'Publications by year: cumulative sum', 'y':0.95, 'x':0.5, 'yanchor':'top'})\n",
+    "# fig2.update_layout(\n",
+    "#     autosize=False,\n",
+    "#     width=1000,\n",
+    "#     height=500,)\n",
+    "# fig2.update_xaxes(tickangle=-70)"
    ]
   },
   {
@@ -4696,11 +4696,11 @@
     }
    ],
    "source": [
-    "df_publisher = pd.DataFrame(df['Publisher'].value_counts())\n",
-    "df_publisher = df_publisher.sort_values(['Publisher'], ascending=[False])\n",
-    "df_publisher = df_publisher.reset_index()\n",
-    "df_publisher = df_publisher.rename(columns={'index':'Publisher','Publisher':'Count'})\n",
-    "df_publisher"
+    "# df_publisher = pd.DataFrame(df['Publisher'].value_counts())\n",
+    "# df_publisher = df_publisher.sort_values(['Publisher'], ascending=[False])\n",
+    "# df_publisher = df_publisher.reset_index()\n",
+    "# df_publisher = df_publisher.rename(columns={'index':'Publisher','Publisher':'Count'})\n",
+    "# df_publisher"
    ]
   },
   {
@@ -4817,11 +4817,11 @@
     }
    ],
    "source": [
-    "df_journal = pd.DataFrame(df['Journal'].value_counts())\n",
-    "df_journal = df_journal.sort_values(['Journal'], ascending=[False])\n",
-    "df_journal = df_journal.reset_index()\n",
-    "df_journal = df_journal.rename(columns={'index':'Journal','Journal':'Count'})\n",
-    "df_journal"
+    "# df_journal = pd.DataFrame(df['Journal'].value_counts())\n",
+    "# df_journal = df_journal.sort_values(['Journal'], ascending=[False])\n",
+    "# df_journal = df_journal.reset_index()\n",
+    "# df_journal = df_journal.rename(columns={'index':'Journal','Journal':'Count'})\n",
+    "# df_journal"
    ]
   }
  ],
