--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyzotero import zotero\n",
     "import os\n",
+    "import tweepy as tw\n",
     "import pandas as pd\n",
     "import datetime\n",
     "import json, sys\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,21 +90,25 @@
     "df['Publication type'] = df['Publication type'].replace(['forumPost'], 'Forum post')\n",
     "df['Publication type'] = df['Publication type'].replace(['conferencePaper'], 'Conference paper')\n",
     "df['Publication type'] = df['Publication type'].replace(['film'], 'Film')\n",
-    "df['Publication type'] = df['Publication type'].replace(['presentation'], 'Presentation')"
+    "df['Publication type'] = df['Publication type'].replace(['presentation'], 'Presentation')\n",
+    "\n",
+    "df['Journal'] = df['Journal'].replace(['Taylor & Francis Group', 'Taylor and Francis'], 'Taylor and Francis')\n",
+    "df['Journal'] = df['Journal'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
+    "df['Journal'] = df['Journal'].replace(['Praeger Security International', 'Praeger'], 'Praeger')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# day_allitems = datetime.date.today().isoformat()"
+    "day_allitems = datetime.date.today().isoformat()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1606,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2523,7 +2528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -3563,7 +3568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -4583,7 +4588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4704,7 +4709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4816,11 +4821,11 @@
     }
    ],
    "source": [
-    "# df_journal = pd.DataFrame(df['Journal'].value_counts())\n",
-    "# df_journal = df_journal.sort_values(['Journal'], ascending=[False])\n",
-    "# df_journal = df_journal.reset_index()\n",
-    "# df_journal = df_journal.rename(columns={'index':'Journal','Journal':'Count'})\n",
-    "# df_journal"
+    "df_journal = pd.DataFrame(df['Journal'].value_counts())\n",
+    "df_journal = df_journal.sort_values(['Journal'], ascending=[False])\n",
+    "df_journal = df_journal.reset_index()\n",
+    "df_journal = df_journal.rename(columns={'index':'Journal','Journal':'Count'})\n",
+    "df_journal"
    ]
   }
  ],
