--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -92,9 +92,9 @@
     "df['Publication type'] = df['Publication type'].replace(['film'], 'Film')\n",
     "df['Publication type'] = df['Publication type'].replace(['presentation'], 'Presentation')\n",
     "\n",
-    "df['Journal'] = df['Journal'].replace(['Taylor & Francis Group', 'Taylor and Francis'], 'Taylor and Francis')\n",
-    "df['Journal'] = df['Journal'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
-    "df['Journal'] = df['Journal'].replace(['Praeger Security International', 'Praeger'], 'Praeger')"
+    "df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis'], 'Taylor and Francis')\n",
+    "df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
+    "df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')"
    ]
   },
   {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,11 +270,11 @@
     }
    ],
    "source": [
-    "# df_types = pd.DataFrame(df['Publication type'].value_counts())\n",
-    "# df_types = df_types.sort_values(['Publication type'], ascending=[False])\n",
-    "# df_types=df_types.reset_index()\n",
-    "# df_types = df_types.rename(columns={'index':'Publication type','Publication type':'Count'})\n",
-    "# df_types"
+    "df_types = pd.DataFrame(df['Publication type'].value_counts())\n",
+    "df_types = df_types.sort_values(['Publication type'], ascending=[False])\n",
+    "df_types=df_types.reset_index()\n",
+    "df_types = df_types.rename(columns={'index':'Publication type','Publication type':'Count'})\n",
+    "df_types"
    ]
   },
   {
@@ -1600,13 +1600,13 @@
     }
    ],
    "source": [
-    "# fig = px.bar(df_types, x='Publication type', y='Count', color='Publication type')\n",
-    "# fig.update_layout(\n",
-    "#     autosize=False,\n",
-    "#     width=1200,\n",
-    "#     height=600,)\n",
-    "# fig.update_xaxes(tickangle=-70)\n",
-    "# fig.update_layout(title={'text':'Top 10 collections in the library', 'y':0.95, 'x':0.4, 'yanchor':'top'})"
+    "fig = px.bar(df_types, x='Publication type', y='Count', color='Publication type')\n",
+    "fig.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=1200,\n",
+    "    height=600,)\n",
+    "fig.update_xaxes(tickangle=-70)\n",
+    "fig.update_layout(title={'text':'Top 10 collections in the library', 'y':0.95, 'x':0.4, 'yanchor':'top'})"
    ]
   },
   {
@@ -2514,8 +2514,8 @@
     }
    ],
    "source": [
-    "# fig = px.pie(df_types, values='Count', names='Publication type')\n",
-    "# fig.update_layout(title={'text':'Publications by type', 'y':0.95, 'x':0.45, 'yanchor':'top'})\n"
+    "fig = px.pie(df_types, values='Count', names='Publication type')\n",
+    "fig.update_layout(title={'text':'Publications by type', 'y':0.95, 'x':0.45, 'yanchor':'top'})\n"
    ]
   },
   {
@@ -2535,7 +2535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\yaozk\\AppData\\Local\\Temp\\ipykernel_28056\\2792293124.py:1: UserWarning:\n",
+      "C:\\Users\\yaozk\\AppData\\Local\\Temp\\ipykernel_20412\\2792293124.py:1: UserWarning:\n",
       "\n",
       "Parsing dates in DD/MM/YYYY format when dayfirst=False (the default) was specified. This may lead to inconsistently parsed dates! Specify a format to ensure consistent parsing.\n",
       "\n"
@@ -3548,22 +3548,22 @@
     }
    ],
    "source": [
-    "# df['Date published'] = pd.to_datetime(df['Date published'],utc=True, errors='coerce').dt.tz_convert('Europe/London')\n",
-    "# df['Date year'] = df['Date published'].dt.strftime('%Y')\n",
-    "# df['Date year'] = df['Date year'].fillna('No date')\n",
-    "# df_year=df['Date year'].value_counts()\n",
-    "# df_year=df_year.reset_index()\n",
-    "# df_year=df_year.rename(columns={'index':'Publication year','Date year':'Count'})\n",
-    "# df_year.drop(df_year[df_year['Publication year']== 'No date'].index, inplace = True)\n",
-    "# df_year=df_year.sort_values(by='Publication year', ascending=True)\n",
+    "df['Date published'] = pd.to_datetime(df['Date published'],utc=True, errors='coerce').dt.tz_convert('Europe/London')\n",
+    "df['Date year'] = df['Date published'].dt.strftime('%Y')\n",
+    "df['Date year'] = df['Date year'].fillna('No date')\n",
+    "df_year=df['Date year'].value_counts()\n",
+    "df_year=df_year.reset_index()\n",
+    "df_year=df_year.rename(columns={'index':'Publication year','Date year':'Count'})\n",
+    "df_year.drop(df_year[df_year['Publication year']== 'No date'].index, inplace = True)\n",
+    "df_year=df_year.sort_values(by='Publication year', ascending=True)\n",
     "\n",
-    "# fig = px.bar(df_year, x='Publication year', y='Count')\n",
-    "# fig.update_xaxes(tickangle=-70)\n",
-    "# fig.update_layout(\n",
-    "#     autosize=False,\n",
-    "#     width=1400,\n",
-    "#     height=700,)\n",
-    "# fig.update_layout(title={'text':'Publications by year: all items', 'y':0.95, 'x':0.5, 'yanchor':'top'})"
+    "fig = px.bar(df_year, x='Publication year', y='Count')\n",
+    "fig.update_xaxes(tickangle=-70)\n",
+    "fig.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=1400,\n",
+    "    height=700,)\n",
+    "fig.update_layout(title={'text':'Publications by year: all items', 'y':0.95, 'x':0.5, 'yanchor':'top'})"
    ]
   },
   {
@@ -4576,14 +4576,14 @@
     }
    ],
    "source": [
-    "# df_year['Sum'] = df_year['Count'].cumsum()\n",
-    "# fig2 = px.line(df_year, x='Publication year', y='Sum')\n",
-    "# fig2.update_layout(title={'text':'Publications by year: cumulative sum', 'y':0.95, 'x':0.5, 'yanchor':'top'})\n",
-    "# fig2.update_layout(\n",
-    "#     autosize=False,\n",
-    "#     width=1000,\n",
-    "#     height=500,)\n",
-    "# fig2.update_xaxes(tickangle=-70)"
+    "df_year['Sum'] = df_year['Count'].cumsum()\n",
+    "fig2 = px.line(df_year, x='Publication year', y='Sum')\n",
+    "fig2.update_layout(title={'text':'Publications by year: cumulative sum', 'y':0.95, 'x':0.5, 'yanchor':'top'})\n",
+    "fig2.update_layout(\n",
+    "    autosize=False,\n",
+    "    width=1000,\n",
+    "    height=500,)\n",
+    "fig2.update_xaxes(tickangle=-70)"
    ]
   },
   {
@@ -4620,7 +4620,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Routledge</td>\n",
-       "      <td>42</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -4629,18 +4629,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Taylor and Francis</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
        "      <td>Edward Elgar Publishing</td>\n",
        "      <td>10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>Macmillan Education UK</td>\n",
        "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Princeton University Press</td>\n",
-       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -4648,50 +4648,50 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>John Wiley &amp; Sons</td>\n",
+       "      <th>112</th>\n",
+       "      <td>University of Oklahoma Press</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>116</th>\n",
+       "      <th>113</th>\n",
        "      <td>Merrion Press</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
+       "      <th>114</th>\n",
        "      <td>Berghahn Books, Incorporated</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
+       "      <th>115</th>\n",
        "      <td>Kodansha International</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>119</th>\n",
+       "      <th>116</th>\n",
        "      <td>Polity Press</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>120 rows × 2 columns</p>\n",
+       "<p>117 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                        Publisher  Count\n",
-       "0                       Routledge     42\n",
+       "0                       Routledge     48\n",
        "1         Oxford University Press     20\n",
-       "2         Edward Elgar Publishing     10\n",
-       "3          Macmillan Education UK      9\n",
-       "4      Princeton University Press      8\n",
+       "2              Taylor and Francis     13\n",
+       "3         Edward Elgar Publishing     10\n",
+       "4          Macmillan Education UK      9\n",
        "..                            ...    ...\n",
-       "115             John Wiley & Sons      1\n",
-       "116                 Merrion Press      1\n",
-       "117  Berghahn Books, Incorporated      1\n",
-       "118        Kodansha International      1\n",
-       "119                  Polity Press      1\n",
+       "112  University of Oklahoma Press      1\n",
+       "113                 Merrion Press      1\n",
+       "114  Berghahn Books, Incorporated      1\n",
+       "115        Kodansha International      1\n",
+       "116                  Polity Press      1\n",
        "\n",
-       "[120 rows x 2 columns]"
+       "[117 rows x 2 columns]"
       ]
      },
      "execution_count": 12,
@@ -4700,11 +4700,11 @@
     }
    ],
    "source": [
-    "# df_publisher = pd.DataFrame(df['Publisher'].value_counts())\n",
-    "# df_publisher = df_publisher.sort_values(['Publisher'], ascending=[False])\n",
-    "# df_publisher = df_publisher.reset_index()\n",
-    "# df_publisher = df_publisher.rename(columns={'index':'Publisher','Publisher':'Count'})\n",
-    "# df_publisher"
+    "df_publisher = pd.DataFrame(df['Publisher'].value_counts())\n",
+    "df_publisher = df_publisher.sort_values(['Publisher'], ascending=[False])\n",
+    "df_publisher = df_publisher.reset_index()\n",
+    "df_publisher = df_publisher.rename(columns={'index':'Publisher','Publisher':'Count'})\n",
+    "df_publisher"
    ]
   },
   {
