--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,14 +92,14 @@
     "df['Publication type'] = df['Publication type'].replace(['film'], 'Film')\n",
     "df['Publication type'] = df['Publication type'].replace(['presentation'], 'Presentation')\n",
     "\n",
-    "df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis'], 'Taylor and Francis')\n",
+    "df['Publisher'] = df['Publisher'].replace(['Taylor & Francis Group', 'Taylor and Francis', 'Taylor & Francis'], 'Taylor and Francis')\n",
     "df['Publisher'] = df['Publisher'].replace(['Routledge', 'Routledge Handbooks Online'], 'Routledge')\n",
     "df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
