--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -4708,8 +4708,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4769,33 +4774,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>208</th>\n",
-       "      <td>Public Policy and Administration</td>\n",
+       "      <th>179</th>\n",
+       "      <td>The Journal of Slavic Military Studies</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>209</th>\n",
-       "      <td>Security Studies</td>\n",
+       "      <th>180</th>\n",
+       "      <td>War &amp; Society</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>210</th>\n",
-       "      <td>GeoJournal</td>\n",
+       "      <th>181</th>\n",
+       "      <td>Cold War History</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>211</th>\n",
-       "      <td>International affairs [London]</td>\n",
+       "      <th>182</th>\n",
+       "      <td>Harvard Journal of Law &amp; Public Policy</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>212</th>\n",
+       "      <th>183</th>\n",
        "      <td>Theoretical Issues in Ergonomics Science</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>213 rows × 2 columns</p>\n",
+       "<p>184 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -4806,22 +4811,23 @@
        "3                                      Journal of Conflict Studies     13\n",
        "4                                     Journal of Strategic Studies     12\n",
        "..                                                             ...    ...\n",
-       "208                               Public Policy and Administration      1\n",
-       "209                                               Security Studies      1\n",
-       "210                                                     GeoJournal      1\n",
-       "211                                 International affairs [London]      1\n",
-       "212                       Theoretical Issues in Ergonomics Science      1\n",
+       "179                         The Journal of Slavic Military Studies      1\n",
+       "180                                                  War & Society      1\n",
+       "181                                               Cold War History      1\n",
+       "182                         Harvard Journal of Law & Public Policy      1\n",
+       "183                       Theoretical Issues in Ergonomics Science      1\n",
        "\n",
-       "[213 rows x 2 columns]"
+       "[184 rows x 2 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_journal = pd.DataFrame(df['Journal'].value_counts())\n",
+    "df_journal = df.loc[df['Publication type']=='Journal article']\n",
+    "df_journal = pd.DataFrame(df_journal['Journal'].value_counts())\n",
     "df_journal = df_journal.sort_values(['Journal'], ascending=[False])\n",
     "df_journal = df_journal.reset_index()\n",
     "df_journal = df_journal.rename(columns={'index':'Journal','Journal':'Count'})\n",
