--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -97,7 +97,7 @@
     "df['Publisher'] = df['Publisher'].replace(['Praeger Security International', 'Praeger'], 'Praeger')\n",
     "\n",
     "df['Journal'] = df['Journal'].replace(['International Journal of Intelligence and Counterintelligence', 'International Journal of Intelligence and CounterIntelligence'], 'Intl Journal of Intelligence and Counterintelligence')\n",
-    "df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security'], 'Intelligence and National Security')"
+    "df['Journal'] = df['Journal'].replace(['Intelligence and national security', 'Intelligence and National Security', 'Intelligence & National Security'], 'Intelligence and National Security')"
    ]
   },
   {
@@ -111,7 +111,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_fa = df['FirstName2']\n",
+    "df_fa = pd.DataFrame(df_fa.tolist())\n",
+    "df_fa = df_fa[0]\n",
+    "df_fa = df_fa.apply(lambda x: {} if pd.isna(x) else x)\n",
+    "df_new = pd.json_normalize(df_fa, errors='ignore') \n",
+    "df = pd.concat([df, df_new], axis=1)\n",
+    "df['firstName'] = df['firstName'].fillna('null')\n",
+    "df['lastName'] = df['lastName'].fillna('null')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
