--- a/all_items.ipynb
+++ b/all_items.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,11 +127,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('all_items.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2\n",
+    "from sqlalchemy import create_engine\n",
+    "import psycopg2.extras as extras"
    ]
   }
  ],
