--- a/countries.ipynb
+++ b/countries.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +63,11 @@
          "hovertemplate": "Country=%{location}<br>Count=%{z}<extra></extra>",
          "locationmode": "country names",
          "locations": [
+          "Ireland",
+          "UK",
+          "Sudan",
+          "South Sudan",
+          "Uganda",
           "Ukraine",
           "Russia",
           "Angola",
@@ -88,7 +93,6 @@
           "Spain",
           "Libya",
           "South Africa",
-          "UK",
           "United Kingdom",
           "New Zealand",
           "Bulgaria",
@@ -98,7 +102,6 @@
           "Switzerland",
           "Japan",
           "Cyprus",
-          "Ireland",
           "Niger",
           "Nigeria",
           "Cuba",
@@ -129,8 +132,6 @@
           "Morocco",
           "Hong Kong",
           "Myanmar",
-          "Sudan",
-          "South Sudan",
           "Philippines",
           "Gibraltar",
           "Nepal",
@@ -140,7 +141,12 @@
          "name": "",
          "type": "choropleth",
          "z": [
-          87,
+          13,
+          202,
+          2,
+          2,
+          1,
+          88,
           55,
           1,
           168,
@@ -165,7 +171,6 @@
           4,
           1,
           5,
-          200,
           5,
           7,
           1,
@@ -175,7 +180,6 @@
           1,
           20,
           6,
-          12,
           3,
           3,
           6,
@@ -201,8 +205,6 @@
           2,
           1,
           2,
-          1,
-          1,
           1,
           1,
           1,
@@ -1121,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1155,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>UK</td>\n",
-       "      <td>200</td>\n",
+       "      <td>202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1163,7 +1165,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Ukraine</td>\n",
-       "      <td>87</td>\n",
+       "      <td>88</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1172,7 +1174,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Israel</td>\n",
+       "      <td>Germany</td>\n",
        "      <td>27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1181,53 +1183,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>Romania</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>69</th>\n",
-       "      <td>North Macedonia</td>\n",
+       "      <td>Somalia</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>Libya</td>\n",
+       "      <td>Dominican Republic</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
-       "      <td>Bulgaria</td>\n",
+       "      <td>Dominica</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
+       "      <td>Ghana</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
        "      <td>Albania</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>73 rows × 2 columns</p>\n",
+       "<p>74 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Country  Count\n",
-       "0                UK    200\n",
-       "1     United States    168\n",
-       "2           Ukraine     87\n",
-       "3            Russia     55\n",
-       "4            Israel     27\n",
-       "..              ...    ...\n",
-       "68          Romania      1\n",
-       "69  North Macedonia      1\n",
-       "70            Libya      1\n",
-       "71         Bulgaria      1\n",
-       "72          Albania      1\n",
+       "               Country  Count\n",
+       "0                   UK    202\n",
+       "1        United States    168\n",
+       "2              Ukraine     88\n",
+       "3               Russia     55\n",
+       "4              Germany     27\n",
+       "..                 ...    ...\n",
+       "69             Somalia      1\n",
+       "70  Dominican Republic      1\n",
+       "71            Dominica      1\n",
+       "72               Ghana      1\n",
+       "73             Albania      1\n",
        "\n",
-       "[73 rows x 2 columns]"
+       "[74 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1239,48 +1241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_countries.to_csv('countries.csv',index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'countries' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\OneDrive\\06.Data_science\\github\\zotero-intelligence-bibliography\\countries.ipynb Cell 5\u001b[0m in \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39mhttps://raw.githubusercontent.com/YusufAliOzkan/zotero-intelligence-bibliography/main/countries.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Create a choropleth map using plotly express\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m fig \u001b[39m=\u001b[39m px\u001b[39m.\u001b[39mchoropleth_mapbox(df, geojson\u001b[39m=\u001b[39mcountries, locations\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCode\u001b[39m\u001b[39m'\u001b[39m, color\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCount\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m                            featureidkey\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mproperties.ISO_A3\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m                            mapbox_style\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcarto-positron\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m                            zoom\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m, center\u001b[39m=\u001b[39m{\u001b[39m\"\u001b[39m\u001b[39mlat\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m30\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mlon\u001b[39m\u001b[39m\"\u001b[39m: \u001b[39m0\u001b[39m},\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m                            opacity\u001b[39m=\u001b[39m\u001b[39m0.5\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m                            hover_name\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCountry\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m                            title\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mCountry mentions in titles\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Show the map\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/OneDrive/06.Data_science/github/zotero-intelligence-bibliography/countries.ipynb#X14sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m fig\u001b[39m.\u001b[39mshow()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'countries' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "\n",
-    "# Read the CSV file into a pandas dataframe\n",
-    "df = pd.read_csv('https://raw.githubusercontent.com/YusufAliOzkan/zotero-intelligence-bibliography/main/countries.csv')\n",
-    "\n",
-    "# Create a choropleth map using plotly express\n",
-    "fig = px.choropleth_mapbox(df, geojson=countries, locations='Code', color='Count',\n",
-    "                           featureidkey=\"properties.ISO_A3\",\n",
-    "                           mapbox_style=\"carto-positron\",\n",
-    "                           zoom=1, center={\"lat\": 30, \"lon\": 0},\n",
-    "                           opacity=0.5,\n",
-    "                           hover_name='Country',\n",
-    "                           title='Country mentions in titles')\n",
-    "\n",
-    "# Show the map\n",
-    "fig.show()\n"
    ]
   }
  ],
